finished triangles application

--- a/sinatra_rectangle_checker/views/input.erb
+++ b/sinatra_rectangle_checker/views/input.erb
@@ -1,4 +1,4 @@
-<h1>Find our if your rectangle is also a square!</h1>
+<h1>Find out if your rectangle is also a square!</h1>
 
 <form action="/output">
     <div class="form-group">
