updated applications with post requests

--- a/sinatra_parcels/views/input.erb
+++ b/sinatra_parcels/views/input.erb
@@ -1,6 +1,6 @@
 <h3>Calculate the volume and shipping cost for your parcel.</h3>
 <hr />
-<form action="/output">
+<form action="/output" method="post">
     <div class="form-group">
         <label for="length">Length of your parcel in inches</label>
         <input id="l" name="length" class="form-control" type="text">
