--- a/sinatra_triangles/views/input.erb
+++ b/sinatra_triangles/views/input.erb
@@ -1,6 +1,6 @@
 <h1>Enter three lengths of the sides of a triangle and find out what kind of triangle it is</h1>
 
-<form action="/output">
+<form action="/output" method="post">
     <div class="form-group">
         <label for="side_1">Side 1 of your triangle</label>
         <input id="1" name="side_1" class="form-control" type="text">
