--- a/tamagotchi/views/needs.erb
+++ b/tamagotchi/views/needs.erb
@@ -2,7 +2,7 @@
 
 <h3><%= @need %> level: <%= @level %></h3>
 
-<form action="/" method="post">
+<form action="/meet_need" method="post">
     <input id="1" name="feed" class="btn" type="submit" value="<%= @command %>">
 </form
 
